Correct overflow

--- a/src/styles/Scroll.css
+++ b/src/styles/Scroll.css
@@ -3,6 +3,10 @@
     padding-bottom: 100px;
 }
 
+.rough {
+    width: 100%;
+}
+
 .topic {
     text-align: center;
     word-wrap: break-word;
